--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,7 @@
           <div class="large-hero__text-content">
             <div class="wrapper">
               <h1 class="large-hero__title">Your clarity.</h1>
+
               <h2 class="large-hero__subtitle">One trip away.</h2>
               <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
               <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
@@ -55,9 +56,9 @@
               <div class="row__medium-4 row__medium-4-larger">
                 <picture>
                   <source sizes="404px" srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" media="(min-width: 1020px)" alt="Our founder, Jane Doe">
-                    <source sizes="320 px" srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width: 800px)" alt="Our fouder, Jane Doe">
-                      <img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-hi-dpi.jpg 1600" alt="Our founder, Jane Doe">
-                    </picture>
+                  <source sizes="320 px" srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width: 800px)" alt="Our fouder, Jane Doe">
+                  <img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-hi-dpi.jpg 1600" alt="Our founder, Jane Doe">
+                </picture>
                   </div>
                   <div class="row__medium-8 row__medium-8-smaller">
                     <div class="generic-content-container">
@@ -107,28 +108,56 @@
               </div>
             </div>
 
-            <div id="testimonials">
-              <img src="assets/images/icons/comment.svg">
-              <h2>Real Testimonials</h2>
+            <div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials">
+              <div class="wrapper wrapper--no-padding-until-large">
+              	
+              	<h2 class="section-title section-title--blue"><img class="section-title__icon section-title__icon--blue" src="assets/images/icons/comment.svg">Real <strong>Testimonials</strong></h2>
 
-              <img src="assets/images/testimonial-jane.jpg">
-              <h3>Jane Doe</h3>
-              <h3>9 Time Escaper</h3>
-              <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+              	<div class="row row--gutters row--gutters-small row--t-padding row--equal-hight-at-large generic-content-container">
+              		<div class="row__large-4">
+                    <div class="testimonial">
+                      <div class="testimonial__photo">
+                       <picture>
+                         <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jade Doe">
+                       </picture>
+                     </div>
+                     <h3 class="testimonial__title">Jane Doe</h3>
+                     <h4 class="testimonial__subtitle">9 Time Escaper</h4>
+                     <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+                   </div>
+                 </div>
 
-              <img src="assets/images/testimonial-john.jpg">
-              <h3>John Smith</h3>
-              <h3>4 Time Escaper</h3>
-              <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+                 <div class="row__large-4">
+                   <div class="testimonial">
+                    <div class="testimonial__photo">
+                      <picture>
+                         <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+                       </picture>
+                   </div>
+                   <h3 class="testimonial__title">John Smith</h3>
+                   <h4 class="testimonial__subtitle">4 Time Escaper</h4>
+                   <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+                 </div>
+               </div>
 
-              <img src="assets/images/testimonial-cat.jpg">
-              <h3>Cat McKitty</h3>
-              <h3>6 Time Escaper</h3>
-              <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
-            </div>
+               <div class="row__large-4">
+                 <div class="testimonial testimonial--last">
+                  <div class="testimonial__photo">
+                    <picture>
+                         <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+                       </picture>
+                 </div>
+                 <h3 class="testimonial__title">Cat McKitty</h3>
+                 <h4 class="testimonial__subtitle">6 Time Escaper</h4>
+                 <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
 
-            <footer>
-              <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
-            </footer>
-          </body>
-          </html>
+       <footer>
+        <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
+      </footer>
+    </body>
+    </html>
