--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,16 +11,25 @@
 
 </head>
 <body>
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#" class="btn">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="wrapper">
+      <div class="site-header__logo">
+        <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
+      </div>
+      <div class="site-header__menu-icon"></div>
+      <div class="site-header__menu-content">
+        <div class="site-header__btn-container">
+          <a href="#" class="btn">Get in Touch</a>
+        </div>
+        <nav class="primary-nav primary-nav__pull-right">
+          <ul>
+            <li><a href="#our-beginning">Our Beginning</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </header>
 
   <div class="large-hero">
@@ -35,9 +42,9 @@
 
           <div class="large-hero__text-content">
             <div class="wrapper">
-              <h1 class="large-hero__title">Your clarity.</h1>
+              <h1 class="large-hero__title">Your clarity</h1>
 
-              <h2 class="large-hero__subtitle">One trip away.</h2>
+              <h2 class="large-hero__subtitle">One trip away</h2>
               <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
               <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
             </div>
@@ -157,8 +164,12 @@
          </div>
        </div>
 
-       <footer>
-        <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
+       <footer class="site-footer">
+        <div class="wrapper">
+          <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange">Get in Touch</a></p>
+        </div>
       </footer>
     </body>
+
+    <script src="temp/scripts/App.js"></script>
     </html>
