--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 		<meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 
 		<link rel="stylesheet" href="temp/styles/styles.css">
+		<script src="temp/scripts/Vendor.js"></script>
 
 	</head>
 	<body>
@@ -59,14 +60,14 @@
 							<h2 class="headline headline--centered headline--light  headline--b-margin-small">The first trip we planned <strong>was our own.</strong></h2>
 							<h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
 							<div class="wrapper wrapper--medium wrapper--b-margin">
-								<img class="atmobile" srcset="assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952" alt="Couple walking down a street.">
+								<img class="atmobile lazyload" data-srcset="assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952" alt="Couple walking down a street.">
 							</div>
 							<div class="row row--gutters">
 								<div class="row__medium-4 row__medium-4-larger">
 									<picture>
-										<source sizes="404px" srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" media="(min-width: 1020px)" alt="Our founder, Jane Doe">
-											<source sizes="320 px" srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width: 800px)" alt="Our fouder, Jane Doe">
-												<img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-hi-dpi.jpg 1600" alt="Our founder, Jane Doe">
+										<source sizes="404px" data-srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" media="(min-width: 1020px)" alt="Our founder, Jane Doe">
+											<source sizes="320 px" data-srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width: 800px)" alt="Our fouder, Jane Doe">
+												<img class="lazyload" class="lazyload" data-srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-hi-dpi.jpg 1600" alt="Our founder, Jane Doe">
 											</picture>
 										</div>
 										<div class="row__medium-8 row__medium-8-smaller">
@@ -117,7 +118,7 @@
 								</div>
 							</div>
 
-							<div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials" data-matching-link="#testimonials-link">
+							<div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials lazyload" data-matching-link="#testimonials-link">
 								<div class="wrapper wrapper--no-padding-until-large">
 									
 									<h2 class="section-title section-title--blue">
@@ -128,7 +129,7 @@
 												<div class="testimonial">
 													<div class="testimonial__photo">
 													 <picture>
-														 <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jade Doe">
+														 <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jade Doe">
 													 </picture>
 												 </div>
 												 <h3 class="testimonial__title">Jane Doe</h3>
@@ -141,7 +142,7 @@
 											 <div class="testimonial">
 												<div class="testimonial__photo">
 													<picture>
-													 <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+													 <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
 												 </picture>
 											 </div>
 											 <h3 class="testimonial__title">John Smith</h3>
@@ -154,7 +155,7 @@
 										 <div class="testimonial testimonial--last">
 											<div class="testimonial__photo">
 												<picture>
-												 <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+												 <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
 											 </picture>
 										 </div>
 										 <h3 class="testimonial__title">Cat McKitty</h3>
